# speech-watermark-provenance

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: USAGE.md  visual_report.html
examples/: demo.py
screenshots/: README.md
src/: __init__.py  attack_simulator.py  audio_slicer.py  evaluator.py  feature_extractor.py  pipeline.py  reporter.py  watermark_detector.py  watermark_embedder.py  watermark_encoder.py
src/speech_watermark_provenance/: __init__.py  cli.py  core.py  experiments.py  recipe_bank.py  toolkit.py
tests/: test_audio_slicer.py  test_feature_extractor.py  test_smoke.py  test_watermark_embedder.py  test_watermark_encoder.py
